--- a/main/main/index.html
+++ b/main/main/index.html
@@ -1712,7 +1712,7 @@
           <div class="wrapper">
             <span class="span">Email:</span>
 
-            <a href="mailto:info@eduweb.com" class="footer-link">info@CSEPATHSHALA.com</a>
+            <a href="mailto:info@csepathshala.com" class="footer-link">info@csepathshala.com</a>
           </div>
 
         </div>
@@ -1743,10 +1743,6 @@
             <a href="#" class="footer-link">Instructor Profile</a>
           </li>
 
-          <li>
-            <a href="#" class="footer-link">Purchase Guide</a>
-          </li>
-
         </ul>
 
         <ul class="footer-list">
@@ -1757,26 +1753,10 @@
 
           <li>
             <a href="#" class="footer-link">Contact Us</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Gallery</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">News & Articles</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">FAQ's</a>
-          </li>
+          </li>          
 
           <li>
             <a href="#" class="footer-link">Sign In/Registration</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Coming Soon</a>
           </li>
 
         </ul>
@@ -1786,7 +1766,7 @@
           <p class="footer-list-title">Contacts</p>
 
           <p class="footer-list-text">
-            Enter your email address to register to our newsletter subscription
+            
           </p>
 
           <!-- <form action="" class="newsletter-form">
@@ -1846,7 +1826,7 @@
       <div class="container">
 
         <p class="copyright">
-          Copyright 2023 All Rights Reserved by <a href="#" class="copyright-link">Harsh </a>
+          Copyright 2023. All Rights Reserved by <a href="#" class="copyright-link">Harsh </a> and  <a href="#" class="copyright-link"> Vanshaj </a>
         </p>
 
       </div>
