--- a/main/main/index.html
+++ b/main/main/index.html
@@ -141,7 +141,7 @@
             <h1 class="h1 section-title">
               Unlocking the Future of Technology through  
               <br>
-            <span class="animated-text" data-words="Affordable | easy | innovative | Immersive | Hands-On "></span>
+            <span class="animated-text" data-words="Affordable | Easy | Innovative | Immersive | Hands-On "></span>
             <style>
               .animated-text {
                 display: inline-block;
@@ -204,7 +204,7 @@
             learning with CSE Pathshala.
             </h1>
             <p class="hero-text">
-              "CSE Pathshala: Your All-in-One Solution for Unlocking the Future of Technology. Embark on a journey that maximises the value of your time and resources with our programming foundation and high-tech courses, all at an affordable cost. Dive into an innovative and accessible learning experience, purposefully crafted to equip you for the technology-driven future."
+              "CSE Pathshala: Your All-in-One Solution for Unlocking the Future of Technology. Embark on a journey that maximizes the value of your time and resources with our programming foundation and high-tech courses, all at an affordable cost. Dive into an innovative and accessible learning experience, purposefully crafted to equip you for the technology-driven future."
             </p>
 
             <a href="#" class="btn has-before">
@@ -226,7 +226,7 @@
             </div>
 
             <img src="./assets/images/hero-shape-1.svg" width="380" height="190" alt="" class="shape hero-shape-1" style="
-            margin-bottom: -13rem;
+            margin-bottom: -13 rem;
         ">
 
             <img src="./assets/images/hero-shape-2.png" width="622" height="551" alt="" class="shape hero-shape-2">
@@ -1214,7 +1214,7 @@
 
             <li>
               <div class="stats-card" style="--color: 42, 94%, 55%">
-                <h3 class="card-title">10+</h3>
+                <h3 class="card-title">7+</h3>
 
                 <p class="card-text">Top Instructors</p>
               </div>
