--- a/main/main/course/dsa_index.html
+++ b/main/main/course/dsa_index.html
@@ -542,7 +542,7 @@
       <div class="container">
 
         <p class="copyright">
-          Copyright 2023 All Rights Reserved by <a href="#" class="copyright-link">Harsh </a>
+          Copyright 2023 All Rights Reserved by <a href="#" class="copyright-link">Harsh </a> and <a href="#" class="copyright-link">Vanshaj</a>
         </p>
 
       </div>
